class MP2R12Energy has been made a pure virtual base class. The class MP2R12Energy_SpinOrbital derived from MP2R12Energy now has got the original functionality of MP2R12Energy. The class  MP2R12Energy_SpinAdapted is for energy calculations where Singlet  and Triplet spin cases are considered separately. The implementation  of this class has not been finished yet. It uses the function spinadapt  in util.h which generates the spinadapted versions of the f12  intermediate matrices.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408436

--- a/mpqc/.project
+++ b/mpqc/.project
@@ -23,7 +23,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>/Users/evaleev/Development/workspace/mpqc-obj</value>
+					<value>/Users/martin/workspace/mpqc-compile</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.enableFullBuild</key>
@@ -35,7 +35,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
-					<value></value>
+					<value>clean</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.append_environment</key>
@@ -59,7 +59,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.autoBuildTarget</key>
-					<value></value>
+					<value>all</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
