--- a/mpqc/src/lib/chemistry/qc/psi/Makefile
+++ b/mpqc/src/lib/chemistry/qc/psi/Makefile
@@ -4,13 +4,20 @@ ifndef SRCDIR
 endif
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
+include $(TOPDIR)/lib/Makedirlist
 
 TARGET_TO_MAKE = libSCpsi
 BIN_OR_LIB = LIB
 
-CXXSRC = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc psicc_pt2r12.cc
+CXXSRC = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc
 CSRC = 
-INC = psiwfn.h psiinput.h psiexenv.h psifile11.h psicc.h psicc_pt2r12.h
+INC = psiwfn.h psiinput.h psiexenv.h psifile11.h psicc.h
+
+# R12 functionality depends on MP2-R12 code
+ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_MBPTR12),yes)
+CXXSRC := $(CXXSRC) psicc_pt2r12.cc
+INC := $(INC) psicc_pt2r12.h
+endif
 
 psitest.testrun: DO_TESTRUN=no
 
