IntegralLibint2 now can detect and adapt to the ordering used by libint2 library.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408497

--- a/mpqc/src/lib/chemistry/qc/libint2/Makefile
+++ b/mpqc/src/lib/chemistry/qc/libint2/Makefile
@@ -56,7 +56,7 @@ ifeq ($(HAVE_LIBINT2_GENG12),yes)
   CXXSRC += geng12.cc comp_geng12.cc
 endif
 
-INC = libint2.h obintlibint2.h tbintlibint2.h tform.h cartit.h macros.h primpairs.h shellpairs.h
+INC = libint2.h obintlibint2.h tbintlibint2.h tform.h macros.h primpairs.h shellpairs.h
 
 LIBSRC = $(CXXSRC) $(CSRC) $(XCSRC)
 LIBOBJ = $(LIBSRC:%.c=%.$(OBJSUF))
