@LIBS@ can't be found without @LIBDIRS@!
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408504

--- a/mpqc/lib/LocalMakefile.in
+++ b/mpqc/lib/LocalMakefile.in
@@ -135,7 +135,7 @@ HAVE_LIBINT2_G12 = @HAVE_LIBINT2_G12@
 HAVE_LIBINT2_G12_T1G12 = @HAVE_LIBINT2_G12_T1G12@
 HAVE_LIBINT2_GENG12 = @HAVE_LIBINT2_GENG12@
 
-SYSLIBS = @LIBS@ @FLIBS@
+SYSLIBS = @LIBDIRS@ @LIBS@ @FLIBS@
 
 #
 # variables for CCA component code
