adding first pass at MolecularEnergyCCA, a proxy class for CCA models
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408530

--- a/mpqc/src/lib/chemistry/cca/Makefile
+++ b/mpqc/src/lib/chemistry/cca/Makefile
@@ -13,7 +13,7 @@ ifneq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_CINTS),yes)
   EXCLUDE = --exclude='.*CintsEvaluatorFactory.*'
 endif
 
-SUBDIRS = server int
+SUBDIRS = server int molecule
 
 ifeq ($(ENABLESHARED),yes)
   SUBDIRS += module
