--- a/mpqc/lib/LocalMakefile.in
+++ b/mpqc/lib/LocalMakefile.in
@@ -134,6 +134,7 @@ HAVE_LIBINT2_ERI = @HAVE_LIBINT2_ERI@
 HAVE_LIBINT2_G12 = @HAVE_LIBINT2_G12@
 HAVE_LIBINT2_G12_T1G12 = @HAVE_LIBINT2_G12_T1G12@
 HAVE_LIBINT2_GENG12 = @HAVE_LIBINT2_GENG12@
+HAVE_LIBINT2_G12DKH = @HAVE_LIBINT2_G12DKH@
 
 SYSLIBS = @LIBDIRS@ @LIBS@ @FLIBS@
 
