--- a/mpqc/src/lib/chemistry/qc/libint2/Makefile
+++ b/mpqc/src/lib/chemistry/qc/libint2/Makefile
@@ -55,6 +55,9 @@ endif
 ifeq ($(HAVE_LIBINT2_GENG12),yes)
   CXXSRC += geng12.cc comp_geng12.cc
 endif
+ifeq ($(HAVE_LIBINT2_G12DKH),yes)
+  CXXSRC += g12dkh.cc comp_g12dkh.cc
+endif
 
 INC = libint2.h obintlibint2.h tbintlibint2.h tform.h macros.h primpairs.h shellpairs.h
 
