Added stub code for MPQC.Libint2EvaluatorFactory component. Doesn't function yet.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408662

--- a/mpqc/src/lib/chemistry/cca/Makefile
+++ b/mpqc/src/lib/chemistry/cca/Makefile
@@ -12,6 +12,9 @@ include $(SRCDIR)/$(TOPDIR)/lib/cca/CCAMakefile
 ifneq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_CINTS),yes)
   EXCLUDE = --exclude='.*CintsEvaluatorFactory.*'
 endif
+ifneq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_LIBINT2),yes)
+  EXCLUDE = --exclude='.*Libint2EvaluatorFactory.*'
+endif
 
 SUBDIRS = server int molecule
 
