--- a/mpqc/lib/cca/mpqc.cca.in
+++ b/mpqc/lib/cca/mpqc.cca.in
@@ -15,6 +15,7 @@
     <class name="MPQC.OptimizationSolver" desc="ior/impl" />
     <class name="MPQC.IntV3EvaluatorFactory" desc="ior/impl" />
     <class name="MPQC.CintsEvaluatorFactory" desc="ior/impl" />
+    <class name="MPQC.Libint2EvaluatorFactory" desc="ior/impl" />
     <class name="MPQC.SimpleDriver" desc="ior/impl" />
   </library>
 </scl>
@@ -101,6 +102,20 @@
              shared-archive="@prefix@/lib/cca/mpqc.so" />
     <headers path="@prefix@/include/chemistry/cca"
              files="MPQC_CintsEvaluatorFactory" />
+  </environment>
+</componentDeployment>
+
+<componentDeployment
+  name="MPQC.Libint2EvaluatorFactory"
+  paletteClassAlias="MPQC.Libint2EvaluatorFactory" >
+  <environment>
+    <ccaSpec binding="babel" />
+    <library loading="dynamic"
+             name="@prefix@/lib/cca/mpqc.so"
+             libtool-archive="@prefix@/lib/cca/mpqc.la"
+             shared-archive="@prefix@/lib/cca/mpqc.so" />
+    <headers path="@prefix@/include/chemistry/cca"
+             files="MPQC_Libint2EvaluatorFactory" />
   </environment>
 </componentDeployment>
 
