Must turn off safety checks to run ABS/CABS MP2-R12 jobs with small ABS basis sets.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408692

--- a/mpqc/src/bin/mpqc/validate/methods/mp2r12ap_abs.in
+++ b/mpqc/src/bin/mpqc/validate/methods/mp2r12ap_abs.in
@@ -26,6 +26,8 @@
      basis = $:basis
      aux_basis = $:abasis
      abs_method = abs
+     % this ABS is not complete enough, hence turn off the check
+     safety_check = false
      spinadapted = true
      stdapprox = "a'"
      ebc = true
