Replaced obsolete keywords "r12ints" and "r12ints_file" with "store_ints" and "ints_file".
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408693

--- a/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_c6h6_multipass.in
+++ b/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_c6h6_multipass.in
@@ -47,8 +47,8 @@ mpqc: (
     memory = 36000000
     stdapprox = "A"
     nfzc = 0
-    r12ints = posix 
-    r12ints_file = "./mbpt_mp2r12_c6h6_multipass.r12ints.dat"
+    store_ints = posix 
+    ints_file = "./mbpt_mp2r12_c6h6_multipass.moints.dat"
     aux_basis<GaussianBasisSet>: (
       name = "cc-pVDZ"
       molecule = $:molecule
