--- a/mpqc/src/bin/mpqc/validate/methods/mp2r12ap_nogebc.in
+++ b/mpqc/src/bin/mpqc/validate/methods/mp2r12ap_nogebc.in
@@ -31,7 +31,7 @@
      ebc = false
      gbc = false
      memory = 10000000
-     r12ints = posix
+     store_ints = posix
      nfzc = 1
      integrals<IntegralCints>: ()
      reference<CLHF>: (
