--- a/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2r12_ne2_multipass.in
+++ b/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2r12_ne2_multipass.in
@@ -37,8 +37,8 @@ mpqc: (
     memory = 2250000
     stdapprox = "A"
     nfzc = 2
-    r12ints = posix 
-    r12ints_file = "./mbpt_mp2r12_ne2_multipass.r12ints.dat"
+    store_ints = posix 
+    ints_file = "./mbpt_mp2r12_ne2_multipass.moints.dat"
     aux_basis<GaussianBasisSet>: (
       name = "aug-cc-pVDZ"
       molecule = $:molecule
