--- a/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_+gbc.in
+++ b/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_+gbc.in
@@ -31,7 +31,7 @@
      ebc = false
      gbc = true
      memory = 100MB
-     r12ints = posix
+     store_ints = posix
      nfzc = 1
      integrals<IntegralCints>: ()
      reference<CLHF>: (
