1) removed stdapprox=A tests since this is now obsolete 2) removed mbpt_mp2r12_ne2_posix test since posix is now the default storage method 3) removed ints_file since the fault is ok now 4) updated misc mp2-r12 outputs
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408700

--- a/mpqc/src/bin/mpqc/validate/Makefile
+++ b/mpqc/src/bin/mpqc/validate/Makefile
@@ -222,7 +222,7 @@ MBPTINPUTS = \
 ifeq ($(HAVE_MBPTR12),yes)
  ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_CINTS),yes)
   MBPTINPUTS += \
-    mbpt_mp2r12_ne2.in            mbpt_mp2r12_ne2_posix.in \
+    mbpt_mp2r12_ne2.in \
     mbpt_mp2r12_ne2_tz.in         mbpt_mp2r12_ne2_dyn.in \
     mbpt_mp2r12_c6h6_multipass.in
   ifeq ($(MPQCRUN_NTHREADPERPROC),1)
