--- a/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_ne2.in
+++ b/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_ne2.in
@@ -35,7 +35,7 @@ mpqc: (
     basis = $:basis
     coor = $..:coor
     memory = 32000000
-    stdapprox = "A"
+    stdapprox = "A'"
     nfzc = 2
     aux_basis<GaussianBasisSet>: (
       name = "aug-cc-pVDZ"
