--- a/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_c6h6_multipass.in
+++ b/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_c6h6_multipass.in
@@ -45,10 +45,9 @@ mpqc: (
     basis = $:basis
     coor = $..:coor
     memory = 36000000
-    stdapprox = "A"
+    stdapprox = "A'"
     nfzc = 0
-    store_ints = posix 
-    ints_file = "./mbpt_mp2r12_c6h6_multipass.moints.dat"
+    store_ints = posix
     aux_basis<GaussianBasisSet>: (
       name = "cc-pVDZ"
       molecule = $:molecule
