--- a/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_ne2_posix.in
+++ b/mpqc/src/bin/mpqc/validate/mbpt/mbpt_mp2r12_ne2_posix.in
@@ -35,10 +35,9 @@ mpqc: (
     basis = $:basis
     coor = $..:coor
     memory = 32000000
-    stdapprox = "A"
+    stdapprox = "A'"
     nfzc = 2
-    store_ints = posix 
-    ints_file = "./mbpt_mp2r12_ne2_posix.moints.dat"
+    store_ints = posix
     aux_basis<GaussianBasisSet>: (
       name = "aug-cc-pVDZ"
       molecule = $:molecule
